--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.7",
     "svelte": "^5.15.0",
     "typescript": "^5.7.3",
-    "vite": "^6.0.5"
+    "vite": "^6.0.11", 
+    "esbuild": "0.24.2" 
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.1.3",
