--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,34 @@
 # Byte-compiled / optimized / DLL files
-backend/__pycache__/
-backend/*.pyc
-backend/*.pyo
-backend/*.pyd
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyc
+*.pyo
+*.pyd
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
 # SQLite database files
 backend/*.db
