--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,6 @@ Thumbs.db
 # Misc
 *.swp
 *.swo
-.github/*
-steps_to_do.txt
 steps_to_do.md
+steps_to_do.txt
+.github/instructions/github.instructions.md
