--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
     build: ./backend
     volumes:
       - ./backend:/app
+      - ./uploads:/app/uploads
     ports:
       - "5000:5000"
     environment:
       - FLASK_ENV=development
-    depends_on:
-      - frontend 
+      - STORAGE_TYPE=local
   frontend:
     build: ./frontend
     volumes:
@@ -18,3 +18,6 @@ services:
       - "5173:5173"
     environment:
       - NODE_ENV=development
+      - VITE_BACKEND_URL=http://backend:5000
+    depends_on:
+      - backend
